--- a/Contact.html
+++ b/Contact.html
@@ -13,7 +13,7 @@
         </div>
         <h1 style="padding-left: 40px;"> HOFITOGRAPHY - CONTACT 
             <ul class="ul">
-                <li><a href="Home.html" >HOME</a></li>
+                <li><a href="Index.html" >HOME</a></li>
                 <li><a href="About Us.html">ABOUT</a></li>
                 <li><a href="Services.html">SERVICES</a></li>
                 <li><a href="Design.html">DESIGN</a></li>
