--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hofitography</title>
-    <link rel="stylesheet" href="Home Style.css">
+    <link rel="stylesheet" href="Index Style.css">
 </head>
  <body>
      <div class="main">
