--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
              </div>
              <div class="menu">
                 <ul>
-                    <li><a href="Home.html" >HOME</a></li>
+                    <li><a href="Index.html" >HOME</a></li>
                     <li><a href="About Us.html">ABOUT</a></li>
                     <li><a href="Services.html">SERVICES</a></li>
                     <li><a href="Design.html">DESIGN</a></li>
